commands.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-service-deployment
  labels:
    app: command-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: command-service
  template:
    metadata:
      name: command-service
      labels:
        app: command-service
    spec:
      containers:
        - name: command-service-container
          image: ashenblade/commands-service:1.1
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: command-service
  labels:
    type: service
spec:
  type: NodePort
  selector:
    app: command-service
  ports:
    - port: 8080
      targetPort: 80
