kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-load-balancer
  labels:
    app: kafka
spec:
  selector:
    app: kafka
  type: LoadBalancer
  ports:
    - port: 9092
      targetPort: 9092
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka-ss
  labels:
    app: kafka
spec:
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-service
  replicas: 1
  template: 
    metadata:
      name: kafka
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9094
          volumeMounts:
            - mountPath: /kafka
              name: kafka-volume
  volumeClaimTemplates:
    - metadata:
        name: kafka-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: '1Gi'
