platform.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-service-deployment
  labels:
    app: PlatformService
spec:
  replicas: 1
  selector:
    matchLabels:
      app: PlatformService
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      name: PlatformService
      labels:
        app: PlatformService
    spec:
      containers:
        - name: platform-service
          image: ashenblade/platform-service:1.2
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: platform-service
  labels:
    app: PlatformService
spec:
  selector:
    app: PlatformService
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 80
