zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper-load-balancer
  labels:
    app: zookeeper
spec:
  selector:
    app: zookeeper
  type: LoadBalancer
  ports:
    - targetPort: 2181
      port: 2181
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-ss
  labels:
    app: zookeeper
spec:
  selector:
    matchLabels:
      app: zookeeper
  serviceName: zookeeper-service
  replicas: 1
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: bitnami/zookeeper
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2181
          volumeMounts:
            - mountPath: /bitnami/zookeeper
              name: zookeeper-disk
  volumeClaimTemplates:
    - metadata:
        name: zookeeper-disk
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: '1Gi'
