ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  labels:
    tier: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: 'true'
    kubernetes.io/ingress.class: 'nginx'
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: platform-service
                port:
                  number: 8080
            path: /platform-api(/|$)(.*)
            pathType: Prefix
